added js file and styled h2 in index file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>this is am header</h1>
+    <h2 style="background-color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, architecto?</h2>
 </body>
 </html>
