added style to the html and added new js file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>this is am header</h1>
+    <h2 style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aut dolorem itaque nostrum, culpa quo?</h2>
 </body>
 </html>
