added new header

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <h1>this is am header</h1>
-<<<<<<< HEAD
-    <h2 style="background-color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, architecto?</h2>
-=======
-    <h2 style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aut dolorem itaque nostrum, culpa quo?</h2>
->>>>>>> feature-2
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, architecto?</h2>
+    <h3>Lorem ipsum dolor sit.</h3>
+    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates facilis totam ipsa?</h4>
 </body>
 </html>
