added inline-block a and p

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>this is am header</h1>
     <h2 style="background-color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, architecto?</h2>
+    <p>paragraph 24</p>
+    <a href="df">this is a link</a>
 </body>
 </html>
