--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Git project</title>
 </head>
 <body>
-    <h1>this is am header</h1>
+    <h1 style="border: 2px solid red;border-radius: 10px;padding: 20px;text-transform: capitalize;">this is am header</h1>
 
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, architecto?</h2>
     <h3>Lorem ipsum dolor sit.</h3>
     <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates facilis totam ipsa?</h4>
 
     <h2 style="background-color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, architecto?</h2>
-    <p>paragraph 24</p>
+    <p style="color: red;">paragraph 24</p>
     <a href="df">this is a link</a>
 
 </body>
